tests/snapshots/async_fn/output-ws-h16.snap
---
source: tests/runner.rs
description: top-type-sizes -ws -h16
---
16386 [async fn body@$DIR/async.rs:8:36: 11:2] align=1
  16385 variant Suspend0
       8192 arg (upvar) align=1 offset=0
       8192 arg
   8192 variant Unresumed, Returned, Panicked
       8192 arg (upvar) align=1 offset=0

1 std::task::Poll<()> align=1
      0 variant Ready, Pending

1 [async fn body@$DIR/async.rs:6:17: 6:19] align=1
      0 variant Unresumed, Returned, Panicked
